BI + Object Color + Shadeless = not rendering. #46260

Closed
opened 2015-09-25 03:23:13 +02:00 by Mario Mey · 13 comments

As the title says, if I have an object with:

  • Object Color with green, alpha 0.5, for example.
  • Object Color activated in Material - Options.
  • Shadeless activated in Material - Shading.

In viewport, the object is tending to green and semi-transparent. I think also in GE.
Rendering in BI, the object is not affected by "Object Color" color and/or alpha.

The workarround would be the object not to be shadeless and Emmit at 1, as @jpbouza-4 said in http://blenderartists.org/forum/showthread.php?175963-2-50-animate-everything-object-visibility&p=1798282&viewfull=1#post1798282.

As the title says, if I have an object with: - Object Color with green, alpha 0.5, for example. - Object Color activated in Material - Options. - Shadeless activated in Material - Shading. In viewport, the object is tending to green and semi-transparent. I think also in GE. **Rendering in BI, the object is not affected by "Object Color" color and/or alpha.** The workarround would be the object not to be shadeless and Emmit at 1, as @jpbouza-4 said in http://blenderartists.org/forum/showthread.php?175963-2-50-animate-everything-object-visibility&p=1798282&viewfull=1#post1798282.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscribers: @MarioSottile, @jpbouza-4

Added subscribers: @MarioSottile, @jpbouza-4

Added subscriber: @NahuelBelich

Added subscriber: @NahuelBelich
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @jml

Added subscriber: @jml

This is the result, doing everything as you say (object color set to green, alpha 0.5) using 2.76.1 as of this morning (Sept. 24)blenderbugs_notrenderingcube.png. BI renderer.

This is the result, doing everything as you say (object color set to green, alpha 0.5) using 2.76.1 as of this morning (Sept. 24)![blenderbugs_notrenderingcube.png](https://archive.blender.org/developer/F238762/blenderbugs_notrenderingcube.png). BI renderer.

Removed subscriber: @jml

Removed subscriber: @jml

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Followed basic steps and the color/alpha seems to be working when:

  • Transparency is checked.
  • Transparency method is set to Z Transparency.

Please always:

  • attach a blend file showing the problem.
  • note which Blender version this was last known to work (if it did once work).
Followed basic steps and the color/alpha seems to be working when: - Transparency is checked. - Transparency method is set to **Z Transparency**. Please always: - attach a blend file showing the problem. - note which Blender version this was last known to work (if it did once work).
Author

Sorry.

Blender version: last from blender.org (2.76-rc2 c586e30)

78_object_color_shadeless-not-working.blend

Sorry. Blender version: last from blender.org (2.76-rc2 c586e30) [78_object_color_shadeless-not-working.blend](https://archive.blender.org/developer/F238963/78_object_color_shadeless-not-working.blend)
Author

The file, added some text and rendered in BI.

Both objects has the same Object Color and, in both, Object Color option is checked in Material options. The difference is their shadeless option.

78.jpg

The file, added some text and rendered in BI. Both objects has the same Object Color and, in both, Object Color option is checked in Material options. The difference is their shadeless option. ![78.jpg](https://archive.blender.org/developer/F239022/78.jpg)

This issue was referenced by 02b7896423

This issue was referenced by 02b789642310f55845ef4e7facc7c2659815bb25

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#46260
No description provided.