Fix T46260: Shadeless option ignores Object-Color